<resources>
    <string name="app_name">Heder-Kosher</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_registered">Registered</string>
    <string name="action_join">Join</string>
    <string name="action_login">Login</string>
    <string name="action_started">Get Started</string>
    <string name="action_about_yourself">Tell Us About Yourself</string>
    <string name="action_settings">Settings</string>


    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Main</string>
    <!--<string name="title_activity_login">Sign in</string>-->
    <!--<string name="title_activity_registration">Registration</string>-->
    <!--<string name="title_activity_welcome">Welcome</string>-->
    <!--<string name="title_activity_start">Start</string>-->
    <!--<string name="title_activity_settings">Settings</string>-->
    <!--<string name="title_activity_main">Heder-Kosher</string>-->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_start">Start</string>
    <string name="title_activity_settings">Settings</string>

    <string name="nameApplication">Name OF The App</string>
    <string name="nameApplicationStatus">Header Kosher</string>
    <string name="firstName">FirstName</string>
    <string name="secondName">SecondName</string>
    <string name="lastName">LastName</string>
    <string name="photoPersonMini">photoPersonMini</string>
    <string name="Phrase">Phrase</string>
    <string name="registeredOk">OK</string>
    <string name="title_activity_about_yourself">About yourself</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
