<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal|fill"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.tr2016.hederkosher.RegistrationActivity">
    <!--tools:context=".LoginActivity"-->

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:weightSum="1"
            android:gravity="fill">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView android:id="@+id/firstName" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/firstName"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView android:id="@+id/secondName" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/secondName"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView android:id="@+id/lastName" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/lastName"
                    android:inputType="text" android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <!--android:onClick="setContentView"-->
            <ImageView
                android:layout_width="55dp"
                android:layout_height="77dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/images_mini"
                android:minHeight="10dp"
                android:minWidth="10dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:contentDescription="@string/photoPersonMini" />

            <Button android:id="@+id/button_registration" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_registered"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/nameApplicationStatus"
                android:id="@+id/nameApplicationStatus"
                android:enabled="true"
                android:fadeScrollbars="false"
                android:maxLines="1"
                android:minLines="1"
                android:textAlignment="center"
                android:keepScreenOn="false"
                android:textSize="@dimen/abc_text_size_title_material_toolbar"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:textAllCaps="false"
                style="@style/TextAppearance.StatusBar.EventContent.Info" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
