<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_welcome" tools:context="com.tr2016.hederkosher.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeUser"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/title_activity_welcome"
        style="@style/Base.TextAppearance.AppCompat.Title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_started"
        android:id="@+id/action_started"
        android:layout_below="@+id/phraseCompany"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phraseCompany"
        android:layout_below="@+id/welcomeUser"
        android:layout_marginTop="69dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/Phrase"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_about_yourself"
        android:id="@+id/action_about_yourself"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp" />

    <TextView
        style="@style/TextAppearance.StatusBar.EventContent.Info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameApplicationStatus"
        android:id="@+id/textView"
        android:enabled="true"
        android:fadeScrollbars="false"
        android:maxLines="1"
        android:minLines="1"
        android:textAlignment="center"
        android:keepScreenOn="false"
        android:textSize="@dimen/abc_text_size_title_material_toolbar"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:textAllCaps="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="48dp" />

</RelativeLayout>
